# llm-ocr-server

./: README.md  pyproject.toml
libs/bookxnote-local-ocr-openapi/: justfile  pyproject.toml
libs/bookxnote-local-ocr-openapi/fern/: bookxnote-local-ocr.yaml  fern.config.json  generators.yml
libs/bookxnote-local-ocr-openapi/src/bookxnote_local_ocr_openapi/: __init__.py
libs/bookxnote-local-ocr-openapi/src/bookxnote_local_ocr_openapi/server_sdk/: __init__.py
libs/bookxnote-local-ocr-openapi/src/bookxnote_local_ocr_openapi/server_sdk/errors/: bad_request_error.py  internal_server_error.py
libs/bookxnote-local-ocr-openapi/src/bookxnote_local_ocr_openapi/server_sdk/service/: service.py
libs/bookxnote-local-ocr-openapi/src/bookxnote_local_ocr_openapi/server_sdk/types/: __init__.py  bad_request_error_body.py  image_request.py  internal_server_error_body.py  ocr_result.py  ocr_result_metadata.py  post_ocr_by_bxn_local_ocr_response.py  post_ocr_by_bxn_local_ocr_response_data.py
llm/got-ocr-2.0-cpu/: README.md  api_server.py  cli.py  core.py  justfile  pyproject.toml
