[project]
name = "got-ocr-2-0-cpu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8, <=3.11"
dependencies = [
    "accelerate==0.28.0",
    "numpy<2",
    "pillow>=10.4.0",
    "tiktoken==0.6.0",
    "torch==2.0.1",
    "torchvision==0.15.2",
    "transformers==4.37.2",
    "verovio==4.3.1",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]
torchvision = [
  { index = "pytorch-cpu" },
]
